syntax = "proto3";

package fs;

option go_package = "./grpc";

import "google/protobuf/timestamp.proto";

service ChatshService {
  rpc CheckDirectoryExists(CheckDirectoryExistsRequest)
      returns (CheckDirectoryExistsResponse);
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc CreateDirectory(CreateDirectoryRequest) returns (CreateDirectoryResponse);
  rpc DeletePath(DeletePathRequest) returns (DeletePathResponse);
  rpc CopyPath(CopyPathRequest) returns (CopyPathResponse);
  rpc MovePath(MovePathRequest) returns (MovePathResponse);
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
  rpc StreamMessage(stream ClientMessage) returns (stream ServerMessage);
  rpc SearchMessage(SearchMessageRequest) returns (SearchMessageResponse);
  rpc WriteMessage(WriteMessageRequest) returns (WriteMessageResponse);
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);
}

message ListMessagesRequest {
  string room_path = 1;
  int32 limit = 2;
}

message ListMessagesResponse { repeated Message messages = 1; }

message Status {
  bool ok = 1;
  string message = 2;
}

enum NodeType {
  UNKNOWN = 0;
  ROOM = 1;
  DIRECTORY = 2;
}

message NodeInfo {
  string name = 1;
  string owner_name = 2;
  NodeType type = 3;
  google.protobuf.Timestamp modified = 4;
}

message Message {
  string text_content = 1;
  string owner_name = 2;
  google.protobuf.Timestamp created = 3;
}

message CheckDirectoryExistsRequest { string path = 1; }

message CheckDirectoryExistsResponse { bool exists = 1; }

message GetConfigRequest { string owner_token = 2; }

message GetConfigResponse { string display_name = 1; }

message SetConfigRequest {
  string owner_token = 1;
  string display_name = 2;
}

message SetConfigResponse { Status status = 1; }

message CreateRoomRequest {
  string path = 1;
  string owner_token = 2;
}

message CreateRoomResponse { Status status = 1; }

message CreateDirectoryRequest {
  string path = 1;
  string owner_token = 2;
}

message CreateDirectoryResponse { Status status = 1; }

message DeletePathRequest {
  string path = 1;
  string owner_token = 2;
}

message DeletePathResponse { Status status = 1; }

message CopyPathRequest {
  string source_path = 1;
  string destination_path = 2;
  string owner_token = 3;
}

message CopyPathResponse { Status status = 1; }

message MovePathRequest {
  string source_path = 1;
  string destination_path = 2;
  string owner_token = 3;
}

message MovePathResponse { Status status = 1; }

message ListNodesRequest { string path = 1; }

message ListNodesResponse { repeated NodeInfo entries = 1; }

message StreamMessageRequest {
  string path = 1;
  string initi_token = 2;
  bool follow = 3;
}

message Join {
  string name = 1;
  string room = 2;
}

message Chat {
  string name = 1;
  string text = 2;
}

message ClientMessage {
  oneof payload {
    Join join = 1;
    Chat chat = 2;
    Tail tail = 3; // For tailing a room
  }
}

message Tail { string room_path = 1; }

message ServerMessage {
  string name = 1;
  string text = 2;
}

message SearchMessageRequest {
  string path = 1;
  string pattern = 2;
}

message SearchMessageResponse { repeated Message messages = 1; }

message WriteMessageRequest {
  string text_content = 1;
  string destination_path = 2;
  string owner_token = 3;
}

message WriteMessageResponse { Status status = 1; }
